test/2/type/label-repeated.err
test/2/type/label-repeated.ploy:2:12-15: syntax error: label is repeated.
|   _ = (i=0 i=1)
             ~~~
test/2/type/label-repeated.ploy:2:8-11: note: label previously appeared here
|   _ = (i=0 i=1)
         ~~~
