test/2/type/label-repeated.ploy
main = {
  _ = (i=0 i=1)
}
